src/test/resources/testcases/invalid/variables/global_var_non_const.tc
int a = 1;
int b = a + 1; // Error: 'a' is not a compile-time constant
int main() {
    return 0;
}
